<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_cocktailtime"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textOff="@string/txt_off"
        android:textOn="@string/txt_on"
        app:layout_constraintEnd_toEndOf="@+id/etChooseTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etChooseTime" />

    <Switch
        android:id="@+id/swi_mon"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_mon"
        app:layout_constraintBottom_toTopOf="@+id/swi_tue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swi_tue"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_tue"
        app:layout_constraintBottom_toTopOf="@+id/swi_wed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toBottomOf="@+id/swi_mon" />

    <Switch
        android:id="@+id/swi_wed"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_wed"
        app:layout_constraintBottom_toTopOf="@+id/swi_thu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toBottomOf="@+id/swi_tue" />

    <Switch
        android:id="@+id/swi_thu"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_thu"
        app:layout_constraintBottom_toTopOf="@+id/swi_fri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toBottomOf="@+id/swi_wed" />

    <Switch
        android:id="@+id/swi_fri"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_fri"
        app:layout_constraintBottom_toTopOf="@+id/swi_sat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toBottomOf="@+id/swi_thu" />

    <Switch
        android:id="@+id/swi_sat"
        android:layout_width="206dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_sat"
        app:layout_constraintBottom_toTopOf="@+id/swi_sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toBottomOf="@+id/swi_fri" />

    <Switch
        android:id="@+id/swi_sun"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etChooseTime"
        app:layout_constraintTop_toBottomOf="@+id/swi_sat" />

    <EditText
        android:id="@+id/etChooseTime"
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="Choose the time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<TimePicker-->
    <!--android:id="@+id/timePicker1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="335dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/textView" />-->

</android.support.constraint.ConstraintLayout>
